--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,4 +1,4 @@
-sms77:
+seven:
   prefix: '%bolt.backend_url%'
-  resource: '../../vendor/sms77/bolt/src/Controller/Backend/'
+  resource: '../../vendor/seven/bolt/src/Controller/Backend/'
   type: annotation
